[project]
name = "agentorchestrator"
version = "0.1.0"
description = "A powerful agent orchestration framework"
authors = [{ name = "Ameen Alam", email = "ameen@doblier.io" }]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "typer>=0.9.0",
    "redis>=5.0.1",
    "psycopg2-binary>=2.9.9",
    "prometheus-client>=0.19.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.0.15",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "langchain-google-genai>=0.0.11",
    "langchain-core>=0.1.31",
]
requires-python = ">=3.12"

# Development dependencies
[project.optional-dependencies]
dev = [
    "watchdog>=3.0.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "pytest>=8.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "ipython>=8.17.2",
]

# Testing dependencies
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.2",
    "httpx>=0.25.2",
    "pytest-cov>=4.1.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
    "mkdocstrings[python]>=0.23.0",
]

# Production dependencies - minimal for deployment
prod = []

[project.scripts]
# CLI commands
ao = "agentorchestrator.cli.main:app"
ao-serve = "agentorchestrator.cli.main:serve_command"
ao-build = "agentorchestrator.cli.main:build_command"
ao-dev = "agentorchestrator.cli.main:dev_command"
ao-test = "agentorchestrator.cli.main:test_command"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py312" 
